--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.cmeza</groupId>
     <artifactId>spring-boot-starter-jdbc-repository</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Spring Boot Starter JDBC Repository</description>
@@ -58,6 +58,7 @@
         <apache.commons.io.version>1.3.2</apache.commons.io.version>
         <hibernate.validation.version>6.2.5.Final</hibernate.validation.version>
         <apache.commons.configuration.version>1.10</apache.commons.configuration.version>
+        <spring.data.commons.version>2.7.17</spring.data.commons.version>
         <lombok.version>1.18.26</lombok.version>
     </properties>
 
@@ -124,6 +125,11 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>${spring.data.commons.version}</version>
         </dependency>
 
     </dependencies>
