--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.cmeza</groupId>
     <artifactId>spring-boot-starter-jdbc-repository</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Spring Boot Starter JDBC Repository</description>
@@ -56,6 +56,7 @@
         <jsqlparser.version>4.6</jsqlparser.version>
         <fasterxml.jackson.annotations.version>2.14.2</fasterxml.jackson.annotations.version>
         <apache.commons.io.version>1.3.2</apache.commons.io.version>
+        <apache.commons.text.version>1.11.0</apache.commons.text.version>
         <hibernate.validation.version>6.2.5.Final</hibernate.validation.version>
         <apache.commons.configuration.version>1.10</apache.commons.configuration.version>
         <spring.data.commons.version>2.7.17</spring.data.commons.version>
@@ -109,6 +110,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>${apache.commons.text.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>${hibernate.validation.version}</version>
@@ -126,6 +133,7 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
